--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -19,11 +19,11 @@
 </div>
 
 <nav>
-    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></a>
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60"></a>
 
     <ul>
 
-        <div class="proto">
+        <!-- <div class="proto"> -->
 
             <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
             <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
@@ -40,9 +40,9 @@
             <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="telNumber">416-464-6573</a></li>
-        </div>
+        <!-- </div> -->
 
-        <div class="cross">
+        <!-- <div class="cross"> -->
             <li>
                 <div class="icon-menu">
                     <div class="bar1"></div>
@@ -50,16 +50,16 @@
                     <div class="bar3"></div>
                 </div>
             </li>
-        </div>
+        <!-- </div> -->
 
     </ul>
 </nav>
 
 <div class="newNav">
-    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60px"></a>
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60"></a>
     <ul>
 
-        <div class="proto">
+        <!-- <div class="proto"> -->
             <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
             <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
                 <ul>
@@ -76,9 +76,9 @@
             <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="telNumber">416-464-6573</a></li>
-        </div>
+        <!-- </div> -->
 
-        <div class="cross">
+        <!-- <div class="cross"> -->
             <li>
                 <div class="icon-menuBottom">
                     <div class="bar1"></div>
@@ -87,7 +87,7 @@
                 </div>
 
             </li>
-        </div>
+        <!-- </div> -->
     </ul>
 
 </div>
