--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,11 +32,7 @@ body {
 }
 
 .website-design-background {
-    background:linear-gradient(
-      rgba(0, 0, 0, 0.3), 
-      rgba(0, 0, 0, 0.3)
-    ),
-    url($baseurl + "/images/website-design-background.jpg") no-repeat center;
+    background:url($baseurl + "/images/website-design-background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:80vh;
@@ -49,10 +45,9 @@ body {
 
 .seo-background {
     background:linear-gradient(
-      rgba(0, 0, 0, 0.3), 
-      rgba(0, 0, 0, 0.3)
-    ),
-    url($baseurl + "/images/seo-background.jpg") no-repeat center;
+        rgba(100, 100, 100, 0.1), 
+        rgba(100, 100, 100, 0.1)
+      ), url($baseurl + "/images/seo-background.jpg") no-repeat center;
     // url($baseurl + "/images/seo-background2.jpg") no-repeat center;
     background-size: cover;
 	width:100%;
@@ -66,8 +61,8 @@ body {
 
 .digital-marketing-background {
     background:linear-gradient(
-      rgba(0, 0, 0, 0.3), 
-      rgba(0, 0, 0, 0.3)
+      rgba(0, 0, 0, 0.1), 
+      rgba(0, 0, 0, 0.1)
     ),
     url($baseurl + "/images/digital-marketing-background.jpg") no-repeat center;
 	background-size: cover;
@@ -114,6 +109,18 @@ body {
     text-align: center;
     color:white;
     padding: 4.5vw 1.825vw;
+}
+
+.contactBanner {
+    background: #a7740c;
+    text-align: center;
+    color:white;
+    padding: 4.5vw 1.825vw;
+}
+
+.contactBanner h2 a {
+    text-decoration: none;
+    color:white;
 }
 
 .bannerBottom {
