--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,7 +13,7 @@
             </ul>
         </li>
 
-        <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
+        <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
         <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
@@ -37,7 +37,7 @@
                 </ul>
             </li>
 
-            <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
+            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="telNumber">(416) 464-6573</a></li>
         <!-- </div> -->
@@ -73,7 +73,7 @@
 
             </li>
 
-            <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
+            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="telNumber">(416) 464-6573</a></li>
         <!-- </div> -->
