--- a/_includes/footermaplesshelpless.html
+++ b/_includes/footermaplesshelpless.html
@@ -1,11 +1,11 @@
-<div id="map"></div>
+<!-- <div id="map"></div> -->
 
 
 
 <div class="body-container">
-		<div class="bannerBottom">
+		<!-- <div class="bannerBottom">
 				<h1 class="toUpper bold">Need help? Feel free to call us at <span style="white-space: nowrap;">416-464-6573</span></h1>
-			</div>
+			</div> -->
 
 	<div class="row eqHeight footerRow">
 
@@ -129,8 +129,7 @@
 
 	<div class="row eqHeight copyrightRow">
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
-				<!-- <p>© 2017 Fivestar Media Inc. | <a href="{{ site.baseurl }}/sitemaps.xml">Sitemap</a></p> -->
-				<p>© 2017 Fivestar Media Inc.</p>
+				<p>© 2017 Fivestar Media Inc. | Sitemap</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
 			<ul>
