--- a/css/styles.scss
+++ b/css/styles.scss
@@ -75,6 +75,18 @@ body {
     position:relative;
 }
 
+.blog-background {
+    background-color: darkgrey;
+	background-size: cover;
+	width:100%;
+    height:80vh;
+    /* min-width:500px; */
+	min-height:350px;
+    margin:0;
+    padding:0;
+    position:relative;
+}
+
 // .topText {
 // 	color:white;
 // 	padding-top:25%;
@@ -221,6 +233,40 @@ h3 {
 .features ul h2 {
     padding:1vw;
 }
+
+
+
+
+ul.blog  {
+    list-style: none;
+     background-color:white;
+    // width:20vw;
+    padding:0;
+// display:flex;
+// align-items:column;
+// color:red;
+}
+
+ul.blog li {
+    text-align: center;
+    font-size:3.2vw;
+    padding:1vw;
+    border-bottom:1px solid #eee;
+    width:90%;
+    margin:0 auto;
+}
+
+ul.blog li:last-child {
+    border-bottom:none;
+}
+
+ul.blog h2 {
+    padding:1vw;
+}
+
+
+
+
 
 // .features ul h1 {
 //     padding:1vw;
