--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+comments: true
 ---
 <body>
     	{% include menu.html %}
@@ -14,7 +15,7 @@ layout: page
     <h3>{{ content }}</h3>
     {% include disqus.html %}
 </div>
-
+</div>
 
 {% include footermaplesshelpless.html %}
 </div>
