--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,4 @@
 <div class="menu">
-
     <ul>
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
@@ -7,87 +6,55 @@
                 <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
                 <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
                 <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
-                <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
-                <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
-                <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
             </ul>
         </li>
-
-        <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+        <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
         <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
-
 <nav>
     <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60"></a>
-
     <ul>
-
-        <!-- <div class="proto"> -->
-
-            <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
-            <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
-                <ul>
-                    <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
-                    <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
-                    <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
-                <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
-                <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
-                </ul>
-            </li>
-
-            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
-            <li><a class="telNumber">(416) 464-6573</a></li>
-        <!-- </div> -->
-
-        <!-- <div class="cross"> -->
-            <li>
-                <div class="icon-menu">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-            </li>
-        <!-- </div> -->
-
+        <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
+        <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
+            <ul>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
+                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
+            </ul>
+        </li>
+        <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
+        <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
+        <li><a class="telNumber">(416) 464-6573</a></li>
+        <li>
+            <div class="icon-menu">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </li>
     </ul>
 </nav>
-
 <div class="newNav">
     <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60"></a>
     <ul>
-
-        <!-- <div class="proto"> -->
-            <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
-            <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
-                <ul>
-                    <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
-                    <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
-                    <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
-                            <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
-                            <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
-                </ul>
-
-            </li>
-
-            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
-            <li><a class="telNumber">(416) 464-6573</a></li>
-        <!-- </div> -->
-
-        <!-- <div class="cross"> -->
-            <li>
-                <div class="icon-menuBottom">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-
-            </li>
-        <!-- </div> -->
+        <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
+        <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
+            <ul>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
+                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
+            </ul>
+        </li>
+        <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
+        <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
+        <li><a class="telNumber">(416) 464-6573</a></li>
+        <li>
+            <div class="icon-menuBottom">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </li>
     </ul>
-
 </div>
