--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -16,7 +16,7 @@
     <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60"></a>
     <ul>
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
-        <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
+        <li><a href="#" onclick="return false;" class="hvr-underline-from-left">Services</a>
             <ul>
                 <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
                 <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
