--- a/_includes/footermaplesshelpless.html
+++ b/_includes/footermaplesshelpless.html
@@ -3,10 +3,9 @@
 		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
 			<p class="toUpper bold">About Us</p>
 			<!-- <p><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></p>						 -->
-			<p>by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-				normal distribution of letters, as opposed to using</p>
-			<p>by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-				normal distribution of letters, as opposed to using</p>
+			<p>Fivestar Media is a Canadian startup digital consulting agency with offices in Brampton and Vaughan.</p>
+			<p>Our objective is to use the best and latest web technologies to position our clients for long-term success on the internet.</p>
+			<p>We believe that doing an outstanding job for our clients will bring them success and our own success will follow.</p>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
 			<p class="toUpper bold">Brampton Office</p>
