--- a/_includes/footermapless.html
+++ b/_includes/footermapless.html
@@ -1,5 +1,5 @@
 <div class="body-container">
-	<div class="bannerBottom">
+	<div class="banner">
 		<h1 class="toUpper bold">Need help? Feel free to call us at <span style="white-space: nowrap;">416-464-6573.</span></h1>
 	</div>
 	<div class="row eqHeight footerRow">
