--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div id="map"></div>
 <div class="body-container">
-	<div class="bannerBottom">
+	<div class="banner">
 		<h1 class="toUpper bold">Need help? Feel free to call us at <span style="white-space: nowrap;">416-464-6573.</span></h1>
 	</div>
 	<div class="row eqHeight footerRow">
@@ -71,16 +71,16 @@
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
 			<ul>
 				<li>
-					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/FivestarMediaHQ"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 				</li>
 				<li>
-					<a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+					<a href="https://facebook.com/FivestarMediaHQ"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
 
 				</li>
-				<li>
+				<!-- <li>
 					<a href="#"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
 
-				</li>
+				</li> -->
 				<li>
 					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 
