--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,7 @@ body {
     position: relative;
     right: 0;
     margin: 0;
-    color: #686666;
+    color: #4F4D4F;
     background: white;
 }
 
@@ -60,6 +60,17 @@ body {
     background: green;
 }
 
+.row.eqHeight.icons {
+    text-align: center;
+    // background: #f1f1f1;
+}
+
+.icons img {
+    margin:20px auto;
+    width:40px;
+    height:auto;
+}
+
 .banner h2 a {
     text-decoration: none;
     color: white;
@@ -81,6 +92,7 @@ h3 {
     font-size: 3.75vw;
     margin: 0;
     line-height: 6vw;
+    color: #767376;
 }
 
 h1.splash {
@@ -115,7 +127,7 @@ h2.splash span {
 }
 
 .greybg {
-    background: #f9f9f9;
+    background: #f1f1f1;
 }
 
 .greyerbg {
@@ -141,6 +153,12 @@ h2.splash span {
 
 .serviceTextBox {
     font-size: 3.2vw;
+    color: #9C989C;
+}
+
+.serviceTextBoxHeading {
+    font-size: 3.2vw;
+    color: #4F4D4F;
 }
 
 .features ul {
@@ -761,12 +779,14 @@ nav img {
     .serviceTextBox {
         font-size: 1.5vw;
     }
+    .serviceTextBoxHeading {
+        font-size: 1.5vw;
+    }
     .banner {
         padding: 3.075vw 1.825vw;
     }
     .serviceHeading {
         padding: 3.075vw 1.825vw;
-        text-align: center;
     }
     .serviceIcon {
         width: 9.975vw;
