--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="map"></div>
 <div class="body-container">
 	<div class="banner">
-		<h1 class="toUpper bold">Need help? Feel free to call us at <span style="white-space: nowrap;">416-464-6573.</span></h1>
+		<h2 class="toUpper bold">If you have any questions, feel free to call us at <span style="white-space: nowrap;">416-464-6573</span></h2>
 	</div>
 	<div class="row eqHeight footerRow">
 		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
