--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 	<link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	{% include analytics.html %}
 </head>
 {{ content }}
