--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,9 +3,9 @@
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
             <ul>
-                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Website Design</a></li>
+                <li><a href="{{ site.baseurl }}/search-engine-optimization-seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/pay-per-click-marketing/" class="hvr-underline-from-left">PPC Marketing</a></li>
             </ul>
         </li>
         <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
@@ -18,9 +18,9 @@
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="#" onclick="return false;" class="hvr-underline-from-left">Services</a>
             <ul>
-                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Website Design</a></li>
+                <li><a href="{{ site.baseurl }}/search-engine-optimization-seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/" class="hvr-underline-from-left">PPC Marketing</a></li>
             </ul>
         </li>
         <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
@@ -41,9 +41,9 @@
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
             <ul>
-                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Website Design</a></li>
+                <li><a href="{{ site.baseurl }}/search-engine-optimization-seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/" class="hvr-underline-from-left">PPC Marketing</a></li>
             </ul>
         </li>
         <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
