--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
 <head>
 	<title>{{ page.title }}</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="theme-color" content="#4286f4">
 	<meta name="msapplication-navbutton-color" content="#4286f4">
