--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,7 +8,7 @@ body {
     right: 0;
     margin: 0;
     color: #4F4D4F;
-    background: white;
+    background: ghostwhite;
 }
 
 .bg {
@@ -16,54 +16,55 @@ body {
     margin: 0;
     padding: 0;
     min-height:350px;
-    height: 80vh;
+    height: 60vh;
 }
 
 .bg.home {
-    background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
     height: 120vh;
     min-height: 600px;
     background-size: cover;
 }
 
 .bg.website-design {
-    background: url($baseurl + "/images/website-design-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
     background-size: cover;
 }
 
 .bg.seo {
-    background: linear-gradient(rgba(100, 100, 100, 0.1), rgba(100, 100, 100, 0.1)), url($baseurl + "/images/seo-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;    
     background-size: cover;
 }
 
 .bg.digital-marketing {
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url($baseurl + "/images/digital-marketing-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;    
     background-size: cover;
 }
 
 .bg.blog {
-    background-color: darkgrey;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
     background-size: cover;
 }
 
 .banner {
     background: #4286f4;
+    // background: #a88e2d;
     text-align: center;
     color: white;
     padding: 4.5vw 1.825vw;
 }
 
 .banner.contact {
-    background: green;
+    background: orange;
 }
 
 .row.eqHeight.icons {
     text-align: center;
-    padding: 3vw 0;
+    padding: 3vw 1.825vw;
 }
 
 .row.eqHeight.icons.secondRow {
-    padding:0 0 3vw 0;
+    padding:0 1.825vw 3vw 1.825vw;
 }
 
 .icons img {
@@ -73,7 +74,7 @@ body {
 }
 
 .shadow {
-    box-shadow: 0px 0px 30px silver;
+    box-shadow: 0px 0px 5px silver;
 }
 
 // .shadowLight {
@@ -136,7 +137,7 @@ h2.splash span {
 }
 
 .greybg {
-    background: #f9f9f9;
+    background: #f5f5f5;
 }
 
 .greyerbg {
@@ -172,7 +173,7 @@ h2.splash span {
 
 .features ul {
     list-style: none;
-    background-color: white;
+    background-color: ghostwhite;
     padding: 0;
 }
 
@@ -195,7 +196,7 @@ h2.splash span {
 
 ul.blog {
     list-style: none;
-    background-color: white;
+    background-color: ghostwhite;
     padding: 0;
 }
 
@@ -262,7 +263,7 @@ ul.blog h2 {
 }
 
 .serviceIcon {
-    width: 30vw;
+    width: 25vw;
 }
 
 .telNumber {
@@ -312,8 +313,12 @@ ul.blog h2 {
     padding-left: 3.5vw;
 }
 
+.spacer {
+    border-bottom:1px solid lightgrey;
+}
+
 .serviceText p {
-    font-size: 3.2vw;
+    font-size: 3.75vw;
 }
 
 .toUpper {
@@ -400,7 +405,7 @@ nav ul li ul {
     top: 45px;
     left: -10px;
     background-color: white;
-    width: 160px;
+    width: 150px;
     padding: 0;
     margin: 0;
     z-index: 5;
@@ -446,7 +451,7 @@ nav img {
     z-index: 99;
     height: 70px;
     background-color: rgba(255, 255, 255, 0.95);
-    box-shadow: 1px 1px 5px lightgrey;
+    // box-shadow: 1px 1px 5px lightgrey;
     display: inline-block;
 }
 
@@ -480,7 +485,7 @@ nav img {
     top: 30px;
     left: -10px;
     background-color: white;
-    width: 160px;
+    width: 150px;
     padding: 0;
     margin: 0;
     z-index: 5;
@@ -654,12 +659,12 @@ nav img {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background: white;
+    background: ghostwhite;
 }
 
 .body-container {
     padding: 0;
-    background: white;
+    background: ghostwhite;
     margin: 0;
 }
 
@@ -798,7 +803,7 @@ nav img {
         padding: 3.075vw 1.825vw;
     }
     .serviceIcon {
-        width: 9.975vw;
+        width: 7.975vw;
     }
     .eqHeight {
         justify-content: space-between;
@@ -908,7 +913,7 @@ nav img {
     }
     .features ul {
         list-style: none;
-        background-color: white;
+        background-color: ghostwhite;
         width: 20vw;
         padding: 0;
     }
