--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,7 +16,7 @@ body {
     margin: 0;
     padding: 0;
     min-height:350px;
-    height: 60vh;
+    height: 80vh;
 }
 
 .bg.home {
@@ -46,6 +46,10 @@ body {
     background-size: cover;
 }
 
+.Why {
+    background:#f0f0f0;
+}
+
 .banner {
     background: #4286f4;
     // background: #a88e2d;
@@ -73,9 +77,9 @@ body {
     height:auto;
 }
 
-.shadow {
-    box-shadow: 0px 0px 5px silver;
-}
+// .shadow {
+//     box-shadow: 0px 0px 5px silver;
+// }
 
 // .shadowLight {
 //     box-shadow: 0px 0px 30px silver;
@@ -99,7 +103,7 @@ h2 {
 }
 
 h3 {
-    font-size: 4vw;
+    font-size: 3.75vw;
     margin: 0;
     line-height: 6vw;
     color: #767376;
@@ -119,7 +123,7 @@ h2.splash {
     color: white;
     padding: 0 0 0 1.825vw;
     margin: 0;
-    font-size: 5vw;
+    font-size: 4.5vw;
     line-height: 7.2vw;
 }
 
@@ -233,10 +237,6 @@ ul.blog h2 {
     text-align: center;
 }
 
-.serviceHeading.Why {
-    background:whitesmoke;
-}
-
 .serviceContainer {
     display: flex;
 }
@@ -317,12 +317,8 @@ ul.blog h2 {
     padding-left: 3.5vw;
 }
 
-// .spacer {
-//     border-bottom:1px solid lightgrey;
-// }
-
 .serviceText p {
-    font-size: 4vw;
+    font-size: 3.5vw;
 }
 
 .toUpper {
@@ -409,7 +405,7 @@ nav ul li ul {
     top: 45px;
     left: -10px;
     background-color: white;
-    width: 150px;
+    width: 140px;
     padding: 0;
     margin: 0;
     z-index: 5;
@@ -489,7 +485,7 @@ nav img {
     top: 30px;
     left: -10px;
     background-color: white;
-    width: 150px;
+    width: 140px;
     padding: 0;
     margin: 0;
     z-index: 5;
@@ -629,7 +625,7 @@ nav img {
 }
 
 .footerCols p {
-    font-size: 4vw;
+    font-size: 3.5vw;
 }
 
 .footerCols p span:first-child {
