--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,20 +12,22 @@
         <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
-<nav>
-    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60"></a>
+<div class="oldNavWrapper oldNav">
+    <!-- <div class="logoContainer"> -->
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" class="logo"></a>
+<!-- </div> -->
     <ul>
-        <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
-        <li><a href="#" onclick="return false;" class="hvr-underline-from-left">Services</a>
+        <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li><a href="#" onclick="return false;">Services</a>
             <ul>
-                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Website Design</a></li>
-                <li><a href="{{ site.baseurl }}/search-engine-optimization-seo/" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/" class="hvr-underline-from-left">PPC Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design/">Website Design</a></li>
+                <li><a href="{{ site.baseurl }}/search-engine-optimization-seo/">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">PPC Marketing</a></li>
             </ul>
         </li>
         <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
-        <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
-        <li><a class="telNumber">(416) 464-6573</a></li>
+        <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
+        <li><a>(416) 464-6573</a></li>
         <li>
             <div class="icon-menu">
                 <div class="bar1"></div>
@@ -34,9 +36,12 @@
             </div>
         </li>
     </ul>
-</nav>
-<div class="newNav">
-    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60"></a>
+</div>
+
+<div class="newNavWrapper newNav">
+        <!-- <div class="logoContainer"> -->
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" class="logo"></a>
+<!-- </div> -->
     <ul>
         <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
