--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,9 +15,9 @@
 	    crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	    crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
+	<!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css"> -->
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
-	<link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
+	{% include icons.html %}
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	{% include analytics.html %}
