--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .bg.home {
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
     height: 120vh;
     min-height: 600px;
     background-size: cover;
@@ -390,7 +390,7 @@ ul.blog h2 {
     justify-content: space-between;
     padding:0 1.825vw;
     z-index:1;
-    height: 14vw;
+    // height: 14vw;
 }
 
 .oldNav ul {
@@ -771,13 +771,13 @@ ul.blog h2 {
 .icon-menu {
     cursor: pointer;
     display: inline-block;
-    // padding-top: 14px;
+    padding-top: 0.8vw;
 }
 
 .icon-menuBottom {
     display: inline-block;
     cursor: pointer;
-    // padding-top:14px;
+    padding-top:0.8vw;
 }
 
 .nameEmail {
@@ -1025,31 +1025,7 @@ ul.blog h2 {
     }
 }
 
-@media (min-width: 1200px) {
-
-// Hamburger
-.bar1, .bar2, .bar3 {
-    width: 6.5vw;
-    height: 1vw;
-    background-color: white;
-    margin: 1.25vw 0;
-    transition: 0.2s;
-    border-radius: 1vw;
-}
-
-.change .bar1 {
-    transform: translate3d(2vw, 1vw, 0) rotate(45deg) scale(0.7, 1);
-}
-
-.change .bar2 {
-    transform: rotate(-180deg);
-}
-
-.change .bar3 {
-    transform: translate3d(2vw, -1vw, 0) rotate(-45deg) scale(0.7, 1);
-}
-}
-
+@media (min-width: 1200px) {}
 
 // Hamburger
 .bar1, .bar2, .bar3 {
