--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,28 +4,29 @@
 		<h2 class="toUpper bold">Call us for a free 30 minute consultation at <span style="white-space: nowrap;">416-464-6573</span></h2>
 	</div>
 	<div class="row eqHeight footerRow">
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
+		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">About Us</p>
 			<!-- <p><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></p>						 -->
 			<p>Fivestar Media is a Canadian startup digital consulting agency with offices in Brampton and Vaughan.</p>
 			<p>Our objective is to use the best and latest web technologies to position our clients for long-term success on the internet.</p>
 			<p>We believe that doing an outstanding job for our clients will bring them success and our own success will follow.</p>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
+		<div class="col-xs-12 col-md-3 footerCols">
+			<p class="bold">Toronto Office</p>
+			<!-- <div class="footerImg">
+				<img src="{{ site.baseurl }}/images/sheppard.jpg">
+			</div> -->
+			<p><span>4711 Yonge Street, 10th Floor</span><span>Toronto, ON</span><span>M2N 6K8, Canada</span><span>+1-416-464-6573</span></p>
+		</div>
+		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Brampton Office</p>
-			<div class="footerImg">
+			<!-- <div class="footerImg">
 				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>
+			</div> -->
 			<p><span>2 County Court Blvd., Suite 400</span><span>Brampton, ON</span><span>L6W 3W8, Canada</span><span>+1-416-464-6573</span></p>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
-			<p class="bold">Vaughan Office</p>
-			<div class="footerImg">
-				<img src="{{ site.baseurl }}/images/sheppard.jpg">
-			</div>
-			<p><span>33 George Gale Road</span><span>Woodbridge, ON</span><span>L4H 2S6, Canada</span><span>+1-416-464-6573</span></p>
-		</div>
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerCols">
+
+		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Our Expertise</p>
 			<ul>
 				<li>
