--- a/css/styles.scss
+++ b/css/styles.scss
@@ -111,6 +111,13 @@ h3 {
     color: #767376;
 }
 
+h4 {
+    font-size: 3.75vw;
+margin-top:0;
+    // line-height: 4vw;
+    color: #767376;
+}
+
 h1.splash {
     text-align: left;
     color: white;
@@ -366,9 +373,44 @@ ul.blog h2 {
     text-decoration: none;
 }
 
+// .scrollFix {
+//     overflow: hidden !important;
+//     white-space: nowrap;
+//     line-height: 1.35;
+// }
+
 #map {
+    // border-top:1px solid grey;
     width: 100%;
-    height: 40vh;
+    height: 50vh;
+
+}
+
+#map h3 {
+    color:red;
+}
+
+#map img {
+width:0;
+height:0;
+}
+
+.mapBox {
+    // width:100%;
+    display:flex;
+    flex-direction: row;
+    // justify-content: space-between;
+}
+
+// Remove Google Maps footer text
+a[href^="http://maps.google.com/maps"]{display:none !important}
+a[href^="https://maps.google.com/maps"]{display:none !important}
+
+.gmnoprint a, .gmnoprint span, .gm-style-cc {
+    display:none;
+}
+.gmnoprint div {
+    background:none !important;
 }
 
 // Menu
@@ -700,6 +742,12 @@ ul.blog h2 {
     padding-top: 4.5vw;
 }
 
+#map p span {
+    display:block;
+    // overflow:hidden;
+    // padding-left:1vw;
+}
+
 .footerCols p span {
     display: block;
 }
@@ -837,14 +885,14 @@ ul.blog h2 {
 }
 
 @media (min-width: 768px) {
-// .bg.home{
 
-// }
+    h4 {
+        font-size: 2.5vw;
+    }
 
 .bg.home {
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
     height: 120vh;
-    // min-height: 600px;
     background-size: cover;
 }
 
@@ -868,6 +916,27 @@ ul.blog h2 {
 }
 
 @media (min-width: 992px) {
+
+    
+    // .mapBox h3 {
+    //     font-size:1vw;
+    // }
+
+    #map p span {
+        // display:block;
+        padding-left:1vw;
+    }
+
+    #map img {
+        width:8vw;
+        height:6vw;
+    }
+
+    // .mapBox{
+    // align-items: row;
+    // }
+
+
     .logo, .oldNavWrapper, .oldNav, .newNavWrapper, .newNav {
         height:4.875vw;
     }
